#+HTML_HEAD: <link type="text/css" rel="stylesheet" href="css/changelog.css"/>
#+HTML_LINK_UP: ./
#+TODO: ADDED CHANGED DEPRECATED REMOVED FIXED SECURITY

All notable changes to this project will be documented in this file.
This project adheres to [[http://semver.org][Semantic Versioning]].

* COMMENT [[https://github.com/ryuslash/yoshi-theme/compare/v7.0.0...HEAD][Unreleased]]

* [[https://github.com/ryuslash/yoshi-theme/compare/v6.2.0...v7.0.0][7.0.0]] -- 2023-08-01
:PROPERTIES:
:CUSTOM_ID: release-7.0.0
:END:

** ADDED Colors and variables for ivy-posframe

   Add the ivy-posframe faces: ~ivy-posframe~, ~ivy-posframe-border~. And variables:
   ~ivy-posframe-border-width~, ~ivy-posframe-style~.

** ADDED Variables for hydra-posframe

   Add the hydra-posframe: ~hydra-posframe-show-params~.

** ADDED Colors and variables for flycheck-posframe

   Add the flycheck-posframe faces: ~flycheck-posframe-background-face~,
   ~flycheck-posframe-border-face~. And variables: ~flycheck-posframe-border-width~.

** CHANGED the background colors of org blocks

   Instead of showing an underline and an overline for the beginning and end
   blocks, give them a background color. With the variable
   =org-fontify-whole-block-delimiter-line= set to =t=, this causes it to create a
   line-thick border at the top of the block. The background of the block itself
   has been changed to match that of other highlighted backgrounds, such as the
   posframe pop-ups for ivy and company. The bottom line has been given the same
   color so that blocks don't look too busy all over your document.

** ADDED the setting to fontify whole block delimiter lines

   With =org-fontify-whole-block-delimiter-line= set to =t= the org block colors
   have a better appearance.

** ADDED Some ediff faces

   Add the ediff faces: =ediff-even-diff-A=, =ediff-even-diff-B=, =ediff-odd-diff-A=,
   and =ediff-odd-diff-B=.

** ADDED fill-column-indicator face

Add the face =fill-column-indicator=.
